[LPF-465]: Generate All Data Models Returned by the Service from the Swagger Documentation [Single point of truth] - Update Swagger spec to include security components
