# src/main/resources/static/swagger.yml
@@ -2,11 +2,41 @@ openapi: 3.0.0
 info:
   title: PayForLegalAid API
   version: 1.0.0
-  description: API for accessing financial reports related to legal aid payments.
+  description: >
+    API for accessing financial reports related to legal aid payments.
+    **Authentication Notice**: 
+    All endpoints are secured using OAuth 2.0 with Azure Graph. A valid access token must be provided 
+    in the `Authorization` header of each request in the following format: 
+    `Authorization: Bearer <ACCESS_TOKEN>`.
+
   contact:
     name: Ministry of Justice
 
+servers:
+  - url: https://api.apps.live.cloud-platform.service.justice.gov.uk/
+    description: Production server
+  - url: https://<staging>.apps.live.cloud-platform.service.justice.gov.uk/
+    description: Staging server
+
 components:
+  links:
+    ReportDetailsLink:
+      operationId: getReportById
+      description: >
+        Link to retrieve detailed metadata for a specific report using its ID.
+      parameters:
+        id: $response.body#/reportList/{id}
+    CsvDownloadLink:
+      operationId: downloadCsv
+      description: Download the report as a CSV stream using its ID.
+      parameters:
+        id: $response.body#/id
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
   responses:
     UnauthorizedError:
       description: Unauthorized. A valid OAuth2 token is required.
@@ -49,11 +79,21 @@ components:
                 type: string
                 example: "BadRequestException: The request could not be processed."
 
+security:
+  - BearerAuth: []
+
 paths:
   /reports:
     get:
+      security:
+        - BearerAuth: [ ]
+      tags:
+        - Reports
       summary: List All Available Reports
-      description: Retrieves a list of all available reports, including each report's ID, name, and metadata.
+      description: >
+        Retrieves a list of all available reports, including each report's ID, name, metadata, 
+        and a link to retrieve detailed metadata for each report.
+        **Note**: The `reportDetailUrl` field in each report provides a direct link to `/report/{id}`.
       responses:
         '200':
           description: A JSON array containing metadata for each report.
@@ -100,6 +140,13 @@ paths:
                         ownerEmail:
                           type: string
                           example: "owneremail@email.com"
+                        reportDetailUrl:
+                          type: string
+                          format: uri
+                          example: "https://example.com/report/1"
+          links:
+            reportDetails:
+              $ref: '#/components/links/ReportDetailsLink'
         '400':
           $ref: '#/components/responses/BadRequestError'
         '401':
@@ -109,8 +156,13 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
 
-  /report/{id}:
+  /reports/{id}:
     get:
+      operationId: getReportById
+      security:
+        - BearerAuth: [ ]
+      tags:
+        - Reports
       summary: Retrieve Report Metadata by ID
       description: Fetches metadata for a specific report using the provided report ID. This includes the report name, ID, and download URL.
       parameters:
@@ -126,6 +178,19 @@ paths:
           description: JSON object with metadata for the specified report.
           content:
             application/json:
+              examples:
+                Report1:
+                  summary: Example Retrieve Report Metadata by ID
+                  value:
+                    id: 1
+                    reportName: "Monthly Revenue Report"
+                    reportDownloadUrl: "https://example.com/reports/1"
+                Report2:
+                  summary: Example  Retrieve Report Metadata by ID 2
+                  value:
+                    id: 2
+                    reportName: "Quarterly Profit Analysis"
+                    reportDownloadUrl: "https://example.com/reports/2"
               schema:
                 type: object
                 properties:
@@ -139,6 +204,9 @@ paths:
                     type: string
                     format: uri
                     example: "https://<service_destination>/csv/1"
+          links:
+            downloadCsv:
+              $ref: '#/components/links/CsvDownloadLink'
         '400':
           $ref: '#/components/responses/BadRequestError'
         '401':
@@ -150,6 +218,10 @@ paths:
 
   /csv/{id}:
     get:
+      tags:
+        - Reports
+      security:
+        - BearerAuth: [ ]
       summary: Download Report as CSV Stream
       description: Provides a CSV data stream for a specified report ID. This can trigger a file download when accessed via a browser.
       parameters:
